@@ -1,1 +1,0 @@
-Emacs LISP files for inputmethod/uim.
